--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debug Projects</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- bootstrap -->
-
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
 
     <main class="container">
-        <div class="d-flex justify-content-between align-items-center">
-            <h1 class="text-center">Find our your favorite Artist</h1>
-            <div class="input-group w-50 mx-auto">
-                <input type="text" class="form-control" id="keyword">
-                <button onclick="searchHandler()" class="btn btn-outline-secondary">Search</button>
+        <!-- input field  -->
+        <header>
+            <h1>Lessson Music Here!!!</h1>
+            <div class="search-container">
+                <input type="text" id="keyword">
+                <button onclick="searchHandler()">Search</button>
             </div>
-        </div>
-        <div class="card-container" id="artist"></div>
-        <div class="album-container" id="album"></div>
+        </header>
+        <!-- artists and albums -->
+        <div class="artist-card-container" id="artists"></div>
+        <div class="albums-card-container" id="albums"></div>
     </main>
+
+
 
     <script src="./js/script.js"></script>
 </body>
